--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ pluginGroup = org.hz.cauchy.parcelablegenerator
 pluginName = Parcelable Generator
 pluginRepositoryUrl =
 # SemVer format -> https://semver.org
-pluginVersion = 1.0.2
+pluginVersion = 1.1.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 232
@@ -16,7 +16,7 @@ platformVersion = 2025.2.1.3
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
-# 注释掉原插件配置，避免冲突
+# æ³¨éæåæä»¶éç½®ï¼é¿åå²çª
 # platformPlugins = org.jetbrains.android:243.24978.46
 platformPlugins =
 
